--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-boto3
-Flask
-python-dotenv
-flask_cors
+boto3==1.17.19
+Flask==2.0.2
+Flask_Cors==3.0.10
+python-dotenv==0.20.0
+waitress==2.1.1
+gunicorn==20.1.0
